Lunchtime check-in

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -22,15 +22,14 @@ resource_version <- "20230811-095752-5b8181d8"
 \markboth{Fast approximate Bayesian inference}{}
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
-This chapter describes a novel Bayesian inference method for extended latent Gaussian models with a moderate number of hyperparameters.
-Development of the method was motivated by the Naomi small-area estimation model [@eaton2021naomi].
+This chapter describes a novel Bayesian inference method for extended latent Gaussian models, motivated by the Naomi small-area estimation model [@eaton2021naomi].
 Over 35 countries [@unaids2023global] have used the Naomi model software ([`https://naomi.unaids.org`](https://naomi.unaids.org)) to produce subnational estimates of HIV indicators.
-Evidence is synthesised from household surveys and routinely collected health data to generate estimates of HIV prevalence, HIV incidence, and ART coverage by district, age, and sex.
+Evidence is synthesised from household surveys and routinely collected health data to generate estimates of HIV indicators by district, age, and sex.
 The complexity and size of the model makes obtaining fast and accurate Bayesian inferences challenging.
-As such, inferences have previously been obtained using an empirical Bayes approximation to full Bayesian inference.
+As such, inferences have previously been obtained using an empirical Bayes (EB) approximation to full Bayesian inference.
 In this approximation hyperparameters are obtained by optimisation of the marginal posterior [@casella1985introduction]. 
-This is undesirable as it results in underestimation of uncertainty, which may ultimately lead to worse policy decisions which stemm from overconfidence.
-Instead, I propose integrating over the moderate dimensional hyperparameters using an modified adaptive Gauss-Hermite quadrature [@naylor1982applications] rule.
+This is undesirable as it results in underestimation of uncertainty, which may ultimately lead to worse policy decisions which stem from overconfidence.
+Instead, I propose integrating over the moderate-dimensional hyperparameters using a modified adaptive Gauss-Hermite quadrature [AGHQ; @naylor1982applications] rule, described in Section \@ref(pca-aghq).
 
 The methods developed in this chapter combine Laplace approximations with adaptive quadrature, and are descended from the integrated nested Laplace approximation (INLA) method pioneered by @rue2009approximate.
 The INLA method has enabled fast and accurate Bayesian inferences for a vast array of models, across a large number of scientific fields [@rue2017bayesian].
@@ -41,9 +40,7 @@ First, the simplified INLA approach of @wood2020simplified, implemented in the `
 Second, @stringer2022fast extend the scope and scalability of INLA by avoiding augmenting the latent field with the noisy additive predictors, referred to by @van2023new as the "modern" formulation of the INLA methodology.
 This allows application of INLA to an extended class of latent Gaussian models.
 Not only is Naomi is a member of this class of models, but the Template Model Builder [`TMB`; @kristensen2016tmb] R package used to implement inference for Naomi also forms the basis for the `aghq` [@stringer2021implementing] R package used to implement @stringer2022fast.
-The work in this chapter builds towards an implementation of INLA using automatic differentiation via `TMB` to obtain the derivatives required for the Laplace approximation.
-
-<!-- Ennumerate contributions and refer to the sections where they come in -->
+Section \@ref(universal) builds towards a universally applicable implementation of INLA, where automatic differentiation is used to obtain the derivatives required for the Laplace approximation.
 
 Though I began working on this project at the beginning of my PhD in 2020, I only began making meaningful progress after reading @stringer2022fast.
 I am grateful to later have had the opportunity to collaborate with Alex Stringer, and work closely together during my visit to the University of Waterloo in the fall term of 2022.
@@ -419,6 +416,7 @@ Discussed in @van2023new.
 The `R-INLA` software [@martins2013bayesian] implements the INLA method, as well as the stochastic partial differential equation (SPDE) approach of @lindgren2011explicit.
 `R-INLA` is the R interface to the core `inla` program, which is written in C [@martino2009implementing] and uses algorithms from the `GMRFLib` C library [@rue2001gmrflib].
 For a review recent computational features of `R-INLA`, including parallelism via `OpenMP` [@diaz2018openmp] and use of the PARDISO sparse linear equation solver [@bollhofer2020state], see @gaedke2023parallelized.
+Further information about `R-INLA`, including recent developments, can be found at [`https://r-inla.org`](https://r-inla.org).
 
 A formula interface of the form `y ~ ...`, similar to that used in the `lm` function in core R `stats` package, is used to specify the connection between the latent field $\mathbf{x}$ and the structured additive predictor $\boldsymbol{\mathbf{\eta}}$.
 For a model with one fixed effect `a` and one IID random effect `b`, the formula would be written as `y ~ a + f(b, model = "iid")`.
@@ -431,8 +429,6 @@ By default, the `grid` strategy is used for $m \leq 2$ and the `ccd` strategy is
 
 Software packages have been built using `R-INLA`.
 The `inlabru` R package [@bachl2019inlabru] provides a simplified syntax, and capabilities for fitting more general non-linear linear predictor expressions via linearisation and repeat use of `R-INLA`.
-
-For more information about `R-INLA`, including recent developments, see [`https://r-inla.org`](https://r-inla.org).
 
 (ref:inla-grid-demo) Consider the function $f(z_1, z_2) = \text{sn}(0.5 z_1, \alpha = 2) \cdot \text{sn}(0.8 z_1 - 0.5 z_2, \alpha = -2)$ as described in Figure \@ref(fig:aghq-demo). Panel A shows the grid method as used in `R-INLA` and detailed in Section 3.1 of @rue2009approximate. Briefly, equally-weighted quadrature points are generated by starting at the mode and taking steps of size $\delta_z$ along each eigenvector of the inverse curvature at the mode, scaled by the eigenvalues, until the difference in log-scale function evaluations (compared to the mode) is below a threshold $\delta_\pi$. Intermediate values are included if they have sufficient log-scale function evaluation. Here, I set $\delta_z = 0.75$ and $\delta_\pi = 2$. Panel B shows a CCD as used in `R-INLA` and detailed in Section 6.5 of @rue2009approximate. I generated the CCD using the `rsm` R package [@lenth2009rsm].
 
@@ -448,7 +444,8 @@ The approach of AD is to decompose any function into a sequence of elementary op
 `TMB` uses the C++ package `CppAD` [@cppaddocumentation] for AD and `Eigen` for linear algebra.
 
 Models can be specified in `TMB` using a C++ template file.
-`TMB` C++ templates are compatible with other software, including `tmbstan` [@monnahan2018no] which allows running HMC via Stan, and `aghq` [@stringer2021implementing] which allows use of AGHQ via `mvQuad` [@weiser2016mvquad].
+`TMB` C++ templates are compatible with other software.
+The `tmbstan` R package [@monnahan2018no] allows running the Hamiltonian Monte Carlo (HMC) algorithm via Stan, and `aghq` [@stringer2021implementing] which allows use of AGHQ via `mvQuad` [@weiser2016mvquad].
 The `glmmTMB` R package [@brooks2017glmmtmb] allows specification of common GLMM models via a formula interface.
 It is possible to extract the `TMB` C++ template implicitly used by `glmmTMB`
 
@@ -459,31 +456,36 @@ The function `mgcv::ginla` implements the simplified INLA approach of @wood2020s
 
 ## A universal INLA implementation {#universal}
 
-This section is about implementation of the INLA method using the `TMB` package, with both Gaussian and Laplace marginals
-The implementation can be described as "universal" in that it is compatible with any model with a `TMB` C++ template, rather than being formula-based [@vstrumbelj2023past].
-A probabilistic programming language can be said to be universal when it is Turing complete.
+This section is about implementation of the INLA method using the `TMB` package, with both Gaussian and Laplace marginals.
+The implementation can be described as "universal" in that it is compatible with any model with a `TMB` C++ template, rather than being based on a formula [@vstrumbelj2023past] llike `R-INLA`.
+<!-- A probabilistic programming language can be said to be universal when it is Turing complete. -->
 
 @martino2019integrated note that "implementing INLA from scratch is a complex task" and as a result "applications of INLA are limited to the (large class of) models implemented [in `R-INLA`]".
-A universal INLA implementation facilitates application of the method to models which are not compatible with `R-INLA`.
-Naomi is one among many examples.
+A universal INLA implementation facilitates application of the method to models which are not compatible with `R-INLA`, including Naomi as one among many examples.
 The potential benefits of a more flexible INLA implementation based on AD were noted by @skaug2009approximate (a coauthor of TMB) in discussion of @rue2009approximate, who noted that such a system would be "fast, flexible, and easy-to-use", as well as "automatic from a user's perspective".
 As this suggestion was made close to 15 years ago, it is surprising that its potential remains unrealised.
 
-The implementation is demonstrated via two applications.
-The first is compatible with `R-INLA`, and used as an example in Section 5.2 of @rue2009approximate.
-It has a significant difference in approximation error depending on use of Gaussian or Laplace marginals, and so is useful as a demonstration of the correspondence between my implementation and that of `R-INLA` with `method` set to `"gaussian"` or `"laplace"`.
-The second is an example of a model that `R-INLA` is not compatible with, and so demonstrates the benefit of a more generally applicable implementation.
+I demonstrate the universal implementation with two examples:
 
-### Epilepsy example
+1. Section \@ref(epil) considers a generalised linear mixed model (GLMM) of an epilepsy drug.
+This example was used in Section 5.2 of @rue2009approximate, and the model is compatible with `R-INLA`.
+For some parameters there is a notable difference in approximation error depending on use of Gaussian (Section) or Laplace (Section) marginals.
+This example is therefore used to demonstrate the correspondence between my Laplace marginal implementation, and that of `R-INLA` with `method` set to `"laplace"`.
+2. Section \@ref(unknown) considers a model which is not is not compatible with `R-INLA`.
+This example is used as a demonstration of the benefit of a more generally applicable INLA implementation.
 
-Consider the generalised linear mixed model (GLMM) example of @spiegelhalter1996bugs for an epilepsy drug double-blind clinical trial [@leppik1985double].
-The model is based on that of @breslow1993approximate, itself a modification of @thall1990some.
+### Epilepsy GLMM {#epil}
 
-In the trial, patients $i = 1, \ldots, 59$ were each assigned either the new drug $\texttt{Trt}_i = 1$ or placebo $\texttt{Trt}_i = 0$.
-Each patient made four visits the clinic $j = 1, \ldots, 4$, and the observations $y_{ij}$ are the number of seizures of the $i$th person in the two weeks preceding their $j$th visit.
-The covariates used in the model were baseline seizure counts $\texttt{Base}_i$, treatment $\texttt{Trt}_i$, a treatment baseline seizure counts interaction, age $\texttt{Age}_i$, and an indicator for the final clinic visit ${\texttt{V}_4}_j$.
-Each of the covariates was centred.
-The observations were modelled using a Poisson distribution $y_{ij} \sim \text{Poisson}(e^{\eta_{ij}})$ with linear predictor 
+Consider a GLMM [@thall1990some; @breslow1993approximate; @spiegelhalter1996bugs] for an epilepsy drug double-blind clinical trial [@leppik1985double] as described below.
+Patients $i = 1, \ldots, 59$ were each assigned either a new drug $\texttt{Trt}_i = 1$ or a placebo $\texttt{Trt}_i = 0$.
+Each patient made four visits the clinic $j = 1, \ldots, 4$, and the observations $y_{ij}$ are the number of seizures of the $i$th person in the two weeks preceding their $j$th clinic visit.
+The covariates used in the model were baseline seizure counts $\texttt{Base}_i$, treatment $\texttt{Trt}_i$, age $\texttt{Age}_i$, and an indicator for the final clinic visit ${\texttt{V}_4}_j$.
+Each of the covariates were centred.
+The observations were modelled using a Poisson distribution
+\begin{equation}
+y_{ij} \sim \text{Poisson}(e^{\eta_{ij}}),
+\end{equation}
+with linear predictor 
 \begin{align}
 \eta_{ij}
 &= \beta_0 + \beta_\texttt{Base} \log(\texttt{Base}_i / 4) + \beta_\texttt{Trt} \texttt{Trt}_i +
@@ -491,20 +493,32 @@ The observations were modelled using a Poisson distribution $y_{ij} \sim \text{P
 &+ \beta_\texttt{Age} \log(\texttt{Age}_i) + \beta_{\texttt{V}_4} {\texttt{V}_4}_j +
    \epsilon_i + \nu_{ij}, \quad i \in [59], \quad j \in [4]. (\#eq:epil)
 \end{align}
-The prior distribution on each of the regression parameters, including the intercept, was $\mathcal{N}(0, 100^2)$.
+The prior distribution on each of the regression parameters, including the intercept $\beta_0$, was $\mathcal{N}(0, 100^2)$.
 The patient $\epsilon_i \sim \mathcal{N}(0, 1/\tau_\epsilon)$ and patient-visit $\nu_{ij} \sim \mathcal{N}(0, 1/\tau_\nu)$ random effects were IID with gamma precision prior distributions $\tau_\epsilon, \tau_\nu \sim \Gamma(0.001, 0.001)$.
 
-(ref:epil) The number of seizures in the treatment group was fewer, on average, than the number of seizures in the control group. This is not sufficient to conclude that the treatment was effective. The GLMM accounts for differences between between the treatment and control group in baseline seizures and age so help estimate a causal treatment effect.
+(ref:epil) The number of seizures in the treatment group was fewer, on average, than the number of seizures in the control group. This is not sufficient to conclude that the treatment was effective. The GLMM accounts for differences between between the treatment and control group, including in baseline seizures and age, and so can be used to help estimate a causal treatment effect.
 
 ```{r epil, fig.cap="(ref:epil)"}
 knitr::include_graphics("figures/naomi-aghq/epil.png")
 ```
 
+I consider inference for the epilespy GLMM using a range of approaches:
 
-#### INLA with `R-INLA`
+1. INLA with `R-INLA` (Section \@ref(epil-inla)).
+2. Gaussian marginals and EB with `TMB` (Section \@ref(epil-gauss-eb-tmb)).
+3. Gaussian marginals and AGHQ with `aghq` (Section \@ref(epil-gauss-aghq-tmb)).
+4. Laplace marginals and EB with `TMB` (Section \@ref(epil-laplace-eb-tmb)).
+5. Laplace marginals and AGHQ with `TMB` (Section \@ref(epil-laplace-aghq-tmb)).
+6. NUTS with `tmbstan` (Section \@ref(epil-nuts)).
 
-After installing and loading the `R-INLA` package, the epilepsy data is available via `data("Epil")`.
-The covariates may be centered and modified by:
+These approaches are compared in Section \@ref(epil-comparison).
+The foremost objective is to demonstrate correspondence between inferences obtained from `R-INLA` and those from `TMB`.
+In this section, though not in future sections, I use illustrative code.
+
+#### INLA with `R-INLA` {#epil-inla}
+
+The epilepsy data are available from the `R-INLA` package.
+The covariates may be obtained by:
 
 ```r
 center <- function(x) (x - mean(x))
@@ -525,7 +539,7 @@ formula <- y ~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT +
   f(Ind,  model = "iid", hyper = tau_prior)
 ```  
 
-The object `tau_prior` specifies the $\Gamma(0.001, 0.001)$ precision prior via:
+The object `tau_prior` specifies the $\Gamma(0.001, 0.001)$ precision prior:
 
 ```r
 tau_prior <- list(prec = list(
@@ -536,7 +550,7 @@ tau_prior <- list(prec = list(
 )
 ```
 
-Inference may then be performed specifying the latent field posterior marginals approach `strat` and quadrature approach `int_strat` via:
+Inference may then be performed, specifying the latent field posterior marginals approach `strat` and quadrature approach `int_strat`:
 
 ```r
 beta_prior <- list(mean = 0, prec = 1 / 100^2)
@@ -563,47 +577,47 @@ fit <- epil_inla(strat = "gaussian", int_strat = "grid")
 
 As described in Section \@ref(r-inla), `strat` may be set to one of `"gaussian"`, `"laplace"`, or `"simplified.laplace"` and `int_strat` may be set to one of `"eb"`, `"grid"`, or `"ccd"`.
 
-#### Gaussian approximation and EB with `TMB` {#gauss-eb-tmb}
+#### Gaussian marginals and EB with `TMB` {#epil-gauss-eb-tmb}
 
-Obtaining inferences with `TMB` requires writing a C++ template for the log-posterior of the model.
-This is often a more involved task then specifying a formula.
-The `TMB` C++ template for the epilepsy GLMM, `epil.cpp`, is in Appendix \@ref(tmb-epil).
+A C++ template for the log-posterior of the model is required to obtain inferences with `TMB`.
+Writing this template is usually a more involved task then specifying a formula in `R-INLA`.
+The `TMB` C++ template `epil.cpp` for the epilepsy GLMM is in Appendix \@ref(tmb-epil).
+This template has been written to specify exactly the same model as `R-INLA` in Section \@ref(epil-inla).
 
-Briefly, lines of code in the template can be divided as follows.
+Lines of code in a `TMB` template are divided as follows.
 The lines with a `DATA_` prefix specify the fixed data inputs to be passed to `TMB`.
 Examples of data inputs include the data $\mathbf{y}$ and the covariate design matrix.
 The lines with a `PARAMETER_` prefix specify the parameters $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$ to be estimated.
-It is recommended to specify all parameters on the real scale to help the optimisation procedure.
+It is recommended to specify all parameters on the real scale to help performance of the optimisation procedure.
 More familiar versions of parameters, such as the precision rather than log precision, may be created outside the `PARAMETER_` section.
 Finally, an object `nlp` is created representing the negative log-posterior, which is then incremented using statements of the form `nlp -= ddist(...)` where `dist` is the name of a distribution.
 
 ```r
-N <- 59
-J <- 4
-K <- 6
-X <- model.matrix(formula(~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT), data = Epil)
-y <- Epil$y
-
 make_epsilon_matrix <- function(N, J) {
   t(outer(1:N, 1:(N * J), function(r, c) as.numeric((J*(r - 1) < c) & (c <= J*r))))
 }
 
-E <- make_epsilon_matrix(N = 3, J = 2)
-
-dat <- list(N = N, J = J, K = K, X = X, y = y, E = make_epsilon_matrix(N, J))
+dat <- list(
+  N = 59,
+  J = 4,
+  K = 6,
+  X = model.matrix(formula(~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT), data = Epil),
+  y = Epil$y,
+  E = make_epsilon_matrix(59, 4)
+)
 
 compile("epil.cpp")
 dyn.load(dynlib("epil"))
 
 param <- list(
-  beta = rep(0, K),
-  epsilon = rep(0, N),
-  nu = rep(0, N * J),
+  beta = rep(0, dat$K),
+  epsilon = rep(0, dat$N),
+  nu = rep(0, dat$N * dat$J),
   l_tau_epsilon = 0,
   l_tau_nu = 0
 )
 
-obj <- MakeADFun(
+obj <- TMB::MakeADFun(
   data = dat,
   parameters = param,
   random = c("beta", "epsilon", "nu"),
@@ -620,49 +634,52 @@ opt <- nlminb(
   control = list(iter.max = its, trace = 0)
 )
 
-sd_out <- sdreport(
+sd_out <- TMB::sdreport(
   obj,
   par.fixed = opt$par,
   getJointPrecision = TRUE
 )
 ```
 
-Note that a similar model, with different priors, can be fit in `glmmTMB` via:
+A similar model, with different priors, can more sufficiently be fit using a formula interface in `glmmTMB`:
 
 ```r
 formula <- y ~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT + (1 | rand) + (1 | Ind)
 fit <- glmmTMB(formula, data = Epil, family = poisson(link = "log"))
 ```
 
-#### Gaussian approximation and AGHQ with `aghq`
+#### Gaussian marginals and AGHQ with `aghq` {#epil-gauss-aghq-tmb}
+
+For more information about the `aghq` R package see the software paper.
 
 ```r
-# aghq code here
+fit <- aghq::marginal_laplace_tmb(obj, k = 3, startingvalue = c(param$l_tau_epsilon, param$l_tau_nu))
 ```
 
-#### Laplace approximation and EB with `TMB`
-
-```r
-# code here
-```
-
-#### Laplace approximation and AGHQ with `TMB`
+#### Laplace marginals and EB with `TMB` {#epil-laplace-eb-tmb}
 
 ```r
 # code here
 ```
 
-#### Hamiltonian Monte Carlo
+#### Laplace marginals and AGHQ with `TMB` {#epil-laplace-aghq-tmb}
 
 ```r
-# tmbstan code here
+# code here
 ```
 
-### An example that `R-INLA` doesn't work for
+#### NUTS with `tmbstan` {#epil-nuts}
+
+```r
+fit <- tmbstan::tmbstan(obj = obj, chains = 4, refresh = 0)
+```
+
+#### Comparison {#epil-comparison}
+
+### An example that `R-INLA` doesn't work for {#unknown}
 
 An example of a model that `R-INLA` can't fit but INLA with `TMB` can.
 Demonstrate Laplace marginals making a difference to accuracy as compared with Gaussian marginals.
-In this section, 
 
 ## The Naomi model {#naomi}
 
@@ -852,28 +869,30 @@ This section presents a case study of Bayesian inference methods applied to the 
 Data from Malawi has previously been used to demonstrate the Naomi model, including as a part of the `naomi` R package vignette available from [`https://github.com/mrc-ide/naomi`](https://github.com/mrc-ide/naomi).
 Malawi was chosen in part because it has a small number of districts, reducing the computational demand of the model.
 
-Three Bayesian inference methods were considered (Table \@ref(tab:bayes-methods)).
+Three Bayesian inference approaches were considered:
+
+1. Gaussian marginals and EB with `TMB`.
+This is the method that has previously been used for Naomi.
+As short-hand, I will refer to it as EB.
+2. Gaussian marginals and PCA-AGHQ with `aghq` and `TMB`.
+This is a novel method.
+As short-hand, I will refer to it as PCA-AGHQ.
+3. NUTS with `tmbstan`.
+This represents a gold-standard.
+
 The `TMB` C++ user-template used to specify the log-posterior was the same for each approach.
 The dimension of the latent field was $N = 467$ and the dimension of the hyperparameters was $m = 24$.
-For the deterministic methods, following inference we simulated hyperparameter and latent field samples.
-For all methods, we simulated age-sex-district specific HIV prevalence, ART coverage and HIV incidence from the latent field and hyperparameter posteriors.
-Model outputs are illustrated in Figure \@ref(fig:naomi-output).
-
-| Method name | Mathematical description | Implementation | Purpose |
-| ----------- | ----------- | -------------- | -------------- |
-| EB          | Gaussian approximation to the latent field $\tilde p_\texttt{G}(\mathbf{x} \, | \, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y})$ | `TMB` | Baseline |
-| PCA-AGHQ    | Mixture of Gaussian approximations $\tilde p_\texttt{G}(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ at the PCA-AGHQ nodes obtained by adapting $\mathbf{z} \in \mathcal{Q}(m, s, k)$ | `TMB` and `aghq` | Novel method |
-| NUTS        | The Hamiltonian Monte Carlo (HMC) algorithm No-U-Turn Sampling (NUTS) | `tmbstan` | Gold-standard |
-
-Table: (\#tab:bayes-methods) Bayesian inference methods.
+For EB and PCA-AGHQ, following inference hyperparameter and latent field samples were simulated.
+For all methods, age-sex-district specific HIV prevalence, ART coverage and HIV incidence were simulated from the latent field and hyperparameter posteriors.
+These model outputs are illustrated in Figure \@ref(fig:naomi-output).
 
 ### NUTS convergence
 
-The effective sample size ratios were low.
-As a result, obtaining acceptable NUTS diagnostics required four chains run in parallel for 100000 iterations.
-These samples were thinned by a factor of 20 for ease-of-storage.
-There were no divergent transitions, and the largest potential scale reduction factor [@gelman1992inference; @vehtari2021rank] was $\hat R = 1.021$ (Figure \ref{fig:rhat}).
-Though inaccuracies remain possible, the results from NUTS were treated as a gold-standard.
+The effective sample size ratios generated sampling from the Naomi model with NUTS were low.
+Obtaining acceptable NUTS diagnostics required four chains run in parallel for 100000 iterations.
+For ease-of-storage, these samples were thinned by a factor of 20 .
+There were no divergent transitions, and the largest potential scale reduction factor [@gelman1992inference; @vehtari2021rank] was $\hat R = 1.021$.
+Though inaccuracies remain possible, these diagnostics are sufficient to treat results from NUTS as a gold-standard.
 
 ### Use of PCA-AGHQ
 
@@ -893,16 +912,16 @@ Second, an approximate Bayesian inference algorithm, which combines AGHQ with PC
 
 ### PCA-AGHQ with application to Naomi
 
-For the simplified Naomi model in Malawi (Section \@ref(malawi)) INLA with Gaussian marginals and the PCA-AGHQ quadrature rule was more accurate at inferring latent field posterior marginal distributions than with an empirical Bayes quadrature rule.
+For the simplified Naomi model in Malawi (Section \@ref(malawi)) INLA with Gaussian marginals and the PCA-AGHQ quadrature rule was more accurate at inferring latent field posterior marginal distributions than with an EB quadrature rule.
 Both INLA approaches were substantially faster than NUTS, which took over two days to reach convergence.
 However, there was limited transfer in latent field posterior marginal distribution accuracy to model output posterior marginal distributions accuracy.
-The approximate posterior exceedance probabilities from INLA, with both empirical Bayes and PCA-AGHQ quadrature rule, had systematic inaccuracies as compared with NUTS.
+The approximate posterior exceedance probabilities from INLA, with both EB and PCA-AGHQ quadrature rule, had systematic inaccuracies as compared with NUTS.
 
 The inaccuracies in model outputs from INLA methods do have the potential to meaningfully mislead policy, and as such where possible gold-standard NUTS results should be computed.
 Though NUTS is to slow to run during the workshop, it could be run after the workshops resolution.
 However, running NUTS for Naomi in Malawi, one of the smallest countries where the model is used, took days and so for larger countries, with hundreds of districts, it may be infeasible to run NUTS to convergence.
 
-NUTS and INLA with the PCA-AGHQ integration strategy could be added to the Naomi web interface as an alternative to INLA with empirical Bayes.
+NUTS and INLA with the PCA-AGHQ integration strategy could be added to the Naomi web interface as an alternative to INLA with EB.
 Analysts may then quickly iterate over model options using a fast inference approach, before switching to a more accurate approach once they are happy with the results.
 
 PCA-AGHQ can be adjusted to suit the computational budget available by choice of the number of dimensions kept in the PCA $s$ and the number of points per dimension $k$.
@@ -928,7 +947,7 @@ As such, using alternative measures of importance from sensitivity analysis, suc
 This is because the Laplace approximation is exact when the integrand is Gaussian, so a single quadrature node is sufficient.
 The difficulty is, of course, knowing in advance which marginals will be non-Gaussian.
 This could be done if there were a cheap way to obtain posterior means, which could then be compared to posterior modes obtained using optimisation.
-Another approach would be to measure the fit of marginal samples from a cheap approximation, like empirical Bayes.
+Another approach would be to measure the fit of marginal samples from a cheap approximation, like EB.
 The measures of fit would have to be for marginals, ruling out approaches like PSIS [@yao2018yes] which operate on joint distributions.
 
 #### Statistical theory
@@ -964,4 +983,4 @@ These algorithms are available, and customisable, including the choice of block 
 
 #### Exploration of the accuracy of INLA for complex models
 
-Among the ELGM-type structures of particular interest in spatial epidemiology are aggregated Gaussian process models [@nandi2020disaggregation] and evidence synthesis models [@amoah2020geostatistical].
+Among the ELGM-type structures of particular interest in spatial epidemiology are aggregated Gaussian process models [@nandi2023disaggregation] and evidence synthesis models [@amoah2020geostatistical].
