--- a/references.bib
+++ b/references.bib
@@ -1664,12 +1664,15 @@ doi = {10.1201/9781420072884-c30}
   year={2020}
 }
 
-@article{nandi2020disaggregation,
-  title={Disaggregation: an R package for Bayesian spatial disaggregation modelling},
+@article{nandi2023disaggregation,
+  title={disaggregation: An R Package for Bayesian Spatial Disaggregation Modeling},
   author={Nandi, Anita K and Lucas, Tim CD and Arambepola, Rohan and Gething, Peter and Weiss, Daniel J},
-  journal={arXiv preprint arXiv:2001.04847},
-  year={2020}
+  journal={Journal of Statistical Software},
+  volume={106},
+  pages={1--19},
+  year={2023}
 }
+
 
 @article{neal2003slice,
   title={Slice sampling},
@@ -1901,4 +1904,24 @@ doi = {10.1201/9781420072884-c30}
   number = {7},
   pages = {1--17},
   doi = {10.18637/jss.v032.i07},
+}
+
+@article{gelman1992inference,
+  title={Inference from iterative simulation using multiple sequences},
+  author={Gelman, Andrew and Rubin, Donald B},
+  journal={Statistical science},
+  pages={457--472},
+  year={1992},
+  publisher={JSTOR}
+}
+
+@article{vehtari2021rank,
+  title={{Rank-normalization, folding, and localization: an improved R for assessing convergence of MCMC (with discussion)}},
+  author={Vehtari, Aki and Gelman, Andrew and Simpson, Daniel and Carpenter, Bob and B{\"u}rkner, Paul-Christian},
+  journal={Bayesian analysis},
+  volume={16},
+  number={2},
+  pages={667--718},
+  year={2021},
+  publisher={International Society for Bayesian Analysis}
 }
